Adding dynamic intro

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -3,7 +3,7 @@
   <section class="headerContainer centerChild">
     <app-header></app-header>
   </section>
-  <section class="mainContainer">
+  <section class="mainContainer mainReveal">
     <div class="mainTitle centerChild">
       <span class="bracket">&#123;</span>
       <h1 class="title">Étudiant</h1>
