--- a/app/src/app/body/notif/notif.component.html
+++ b/app/src/app/body/notif/notif.component.html
@@ -14,7 +14,7 @@
             <img class="notifIcon" src="./assets/img/linkedin_icon.svg"/>
             <span>Lien linkedin</span>
         </a>
-        <a class="notifItem" target="_blank" href="https://github.com/lucas-chapuis">
+        <a class="notifItem" target="_blank" href="https://github.com/lucas066001">
             <img class="notifIcon" src="./assets/img/github_icon.svg"/>
             <span>Lien github</span>    
         </a>
