--- a/app/src/app/body/header/header.component.html
+++ b/app/src/app/body/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="profileDisplay">
-    <img class="portraitImg" src="./assets/img/portrait.png" alt="personnal portait"/>
+    <img class="portraitImg" src="assets/img/portrait.png" alt="personnal portait"/>
     <div class="profileDescription">
         <div class="revealContainer">
             <h1 class="profileName">LUCAS CHAPUIS</h1>
