--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -38,19 +38,19 @@
   <button class="closeButton" (click)="stopAnimation()">X</button>
   <div *ngIf="currentAnimationState == 1" id="titleContainer-1" class="titleContainer">
     <h1>Bonjour !</h1>
-    <img class="portraitImg" src="./assets/img/hand_salutation_icon.svg" alt="pictogramme salutation"/>
+    <img class="portraitImg" src="assets/img/hand_salutation_icon.svg" alt="pictogramme salutation"/>
   </div>
   <div *ngIf="currentAnimationState == 2" id="titleContainer-2" class="titleContainer">
     <h1>Bienvenu sur mon portfolio !</h1>
-    <img class="portraitImg" src="./assets/img/portfolio_icon.svg" alt="pictogramme salutation"/>
+    <img class="portraitImg" src="assets/img/portfolio_icon.svg" alt="pictogramme salutation"/>
   </div>
   <div *ngIf="currentAnimationState == 3" id="titleContainer-3" class="titleContainer">
     <h1>Vous trouverez ici mes <span class="colored-text blue">expériences professionnelles</span> et mon <span class="colored-text">parcours scolaire</span></h1>
-    <img class="portraitImg" src="./assets/img/work_study_icon.svg" alt="pictogramme salutation"/>
+    <img class="portraitImg" src="assets/img/work_study_icon.svg" alt="pictogramme salutation"/>
   </div>
   <div *ngIf="currentAnimationState == 4" id="titleContainer-4" class="titleContainer">
     <h1>N'hésitez pas à utiliser le <span class="colored-text blue">chatbot</span> en bas à droite pour obtenir mes coordonnées et des <span class="colored-text">informations supplémentaires</span> sur mon profil</h1>
-    <img class="portraitImg" src="./assets/img/light_icon.svg" alt="pictogramme salutation"/>
+    <img class="portraitImg" src="assets/img/light_icon.svg" alt="pictogramme salutation"/>
   </div>
   <div class="loader"></div>
 </section>
