--- a/src/app/body/side-bar/about-me/about-me.component.html
+++ b/src/app/body/side-bar/about-me/about-me.component.html
@@ -1,22 +1,22 @@
 <header class="sidebar-header selected">
     <img src="../../../../assets/img/profile_icon.svg" class="sidebar-icon" />
-    <h4>Me concernant</h4>
+    <h4 i18n>Me concernant</h4>
 </header>
-<p class="text">
-    Je suis une personne très investie et 
-    motivée. Je sais m'intéresser à tout 
-    et apprécie autant le travail d'équipe 
-    que personnel. L'effort comme la 
-    réflexion ne me font pas peur. C'est 
-    d'ailleurs ma motivation première : 
-    Apprendre et résoudre des 
+<p class="text" i18n>
+    Je suis une personne très investie et
+    motivée. Je sais m'intéresser à tout
+    et apprécie autant le travail d'équipe
+    que personnel. L'effort comme la
+    réflexion ne me font pas peur. C'est
+    d'ailleurs ma motivation première :
+    Apprendre et résoudre des
     problèmes.
 </p>
 <header class="sidebar-header">
     <img src="../../../../assets/img/identity_card_icon.svg" class="sidebar-icon" />
-    <h4>Caractéristiques</h4>
+    <h4 i18n>Caractéristiques</h4>
 </header>
 <ul>
-    <li>Âge : 20 ans</li>
-    <li>Titulaire permis B</li>
+    <li i18n>Âge : 20 ans</li>
+    <li i18n>Titulaire permis B</li>
 </ul>
