--- a/src/app/body/footer/footer.component.html
+++ b/src/app/body/footer/footer.component.html
@@ -1,1 +1,1 @@
-<span class="copyright centerChild">Copyright © 2022-2023 | Chapuis Lucas. Tous droits réservés</span>
+<span class="copyright centerChild" i18n>Copyright © 2022-2023 | Chapuis Lucas. Tous droits réservés</span>
