refactor: changing assets path from absolute to relative

--- a/src/app/body/header/header.component.html
+++ b/src/app/body/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="profileDisplay">
-    <img class="portraitImg" src="./assets/img/portrait.png" alt="personnal portait"/>
+    <img class="portraitImg" src="assets/img/portrait.png" alt="personnal portait" />
     <div class="profileDescription">
         <div class="revealContainer">
             <h1 class="profileName">LUCAS CHAPUIS</h1>
         </div>
         <div class="labelList">
-            <ng-container *ngFor="let label of labels" >
+            <ng-container *ngFor="let label of labels">
                 <app-label [label]="label"></app-label>
             </ng-container>
         </div>
