--- a/src/app/body/side-bar/about-me/about-me.component.html
+++ b/src/app/body/side-bar/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <header class="sidebar-header selected">
-    <img src="../../../../assets/img/profile_icon.svg" class="sidebar-icon" />
+    <img src="assets/img/profile_icon.svg" class="sidebar-icon" />
     <h4 i18n>Me concernant</h4>
 </header>
 <p class="text" i18n>
@@ -13,7 +13,7 @@
     problèmes.
 </p>
 <header class="sidebar-header">
-    <img src="../../../../assets/img/identity_card_icon.svg" class="sidebar-icon" />
+    <img src="assets/img/identity_card_icon.svg" class="sidebar-icon" />
     <h4 i18n>Caractéristiques</h4>
 </header>
 <ul>
