feat: Adding langage toggle to enable user to switch easily between localizations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,7 @@
   </section>
   <div class="notifContainer">
     <app-notif></app-notif>
+    <app-langage-toggle></app-langage-toggle>
   </div>
   <div class="chatContainer">
     <app-chat></app-chat>
