--- a/src/app/body/side-bar/about-me/about-me.component.html
+++ b/src/app/body/side-bar/about-me/about-me.component.html
@@ -12,10 +12,8 @@
     Apprendre et résoudre des
     problèmes.
 </p>
-<header class="sidebar-header">
-    <img src="assets/img/identity_card_icon.svg" class="sidebar-icon" />
-    <h4 i18n>Caractéristiques</h4>
-</header>
+<h5 class="sidebar-subtitle" i18n>Caractéristiques</h5>
+<br />
 <ul>
     <li i18n>Âge : 20 ans</li>
     <li i18n>Titulaire permis B</li>
