--- a/src/styles.css
+++ b/src/styles.css
@@ -337,9 +337,10 @@ li::before {
 
 .tool-competence-item {
     display: flex;
-    justify-content: space-between;
-    margin: 0.5em 0;
+    justify-content: left;
+    margin: .5em 0;
     align-items: center;
+    gap: 0.5em;
 }
 
 .tool-competence-item:hover .tooltip {
@@ -399,6 +400,17 @@ li::before {
 
 .resultClickable:hover .title {
     text-decoration: underline;
+}
+
+.tool-competence-list-container {
+    padding-top: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+}
+
+.title .label {
+    font-size: small;
 }
 
 .webResult .title {
