feat: Adding new experiences and certifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,6 @@
     <app-header></app-header>
   </section>
   <section class="mainContainer mainReveal">
-    <div class="mainTitle centerChild">
-      <span class="bracket">&#123;</span>
-      <h1 class="title" i18n>Développeur</h1>
-      <div>
-        <h2 class="subTitle" i18n>Architecte</h2>
-        <span class="separatorDotted"></span>
-        <h2 class="subTitle" i18n>Logiciel</h2>
-      </div>
-      <span class="bracket">&#125;</span>
-    </div>
     <div class="contentContainer">
       <div class="sideBarContainer">
         <app-side-bar></app-side-bar>
@@ -43,7 +33,7 @@
     <img class="portraitImg" src="assets/img/hand_salutation_icon.svg" alt="pictogramme salutation" />
   </div>
   <div *ngIf="currentAnimationState == 2" id="titleContainer-2" class="titleContainer">
-    <h1 i18n>Bienvenu sur mon portfolio !</h1>
+    <h1 i18n>Bienvenue sur mon portfolio !</h1>
     <img class="portraitImg" src="assets/img/portfolio_icon.svg" alt="pictogramme salutation" />
   </div>
   <div *ngIf="currentAnimationState == 3" id="titleContainer-3" class="titleContainer">
