--- a/src/app/body/main-resume/formation-resume/formation-resume.component.html
+++ b/src/app/body/main-resume/formation-resume/formation-resume.component.html
@@ -1,4 +1,4 @@
 <article class="webResult">
     <h5 class="title">{{formation?.title}}</h5>
-    <span>{{formation?.description}}</span>
+    <span [innerHTML]="formation?.description" ></span>
 </article>
