--- a/src/app/body/side-bar/about-me/about-me.component.html
+++ b/src/app/body/side-bar/about-me/about-me.component.html
@@ -15,6 +15,6 @@
 <h5 class="sidebar-subtitle" i18n>Caractéristiques</h5>
 <br />
 <ul>
-    <li i18n>Âge : 20 ans</li>
+    <li i18n><p>Âge : {{ age }} ans</li>
     <li i18n>Titulaire permis B</li>
 </ul>
